# thecargo-lib

./: .gitignore  pyproject.toml  requirements.txt
tests/: test_dashboard_shapers.py
thecargo/: audit.py  cache.py  context.py  exception_handlers.py  exceptions.py  handlers.py  i18n.py  lead_fields.py  mongodb.py  observability.py  pdf.py  permissions.py  public_storage.py  role_templates.py  storage.py
thecargo/clients/: __init__.py  communication.py  service.py
thecargo/dashboard/: __init__.py  period.py  schemas.py  shapers.py
thecargo/db/: __init__.py  types.py  url.py
thecargo/dependencies/: _settings.py  auth.py  guards.py  repo.py  service_auth.py  upload.py
thecargo/events/: consumer.py  customer_sync.py  outbox.py  publisher.py  user_sync.py
thecargo/locale/: en.json  ru.json  uz.json
thecargo/middleware/: __init__.py  audit.py  rate_limit.py
thecargo/models/: __init__.py  audit_log.py  base.py  customer_replica.py  file.py  user_replica.py
thecargo/repositories/: base.py
thecargo/routes/: audit_logs.py
thecargo/schemas/: base.py  errors.py  file.py  pagination.py  types.py
thecargo/templating/: __init__.py  filters.py  registry.py  render.py
thecargo/utils/: phone.py  secrets.py  timezone.py
